--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "graphql-demo",
+  "name": "graphql-frontend-demo",
   "private": true,
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
+    "dev": "turbo dev --continue",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
