--- a/turbo.json
+++ b/turbo.json
@@ -6,12 +6,39 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
-    "lint": {
-      "dependsOn": ["^lint"]
-    },
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "server#dev": {
+      "cache": false,
+      "persistent": false
+    },
+    "web#dev": {
+      "cache": false,
+      "persistent": true,
+      "dependsOn": [
+        "generate:types",
+        "generate:possible-types",
+        "relay:schema",
+        "relay:generate"
+      ],
+      "outputs": ["web/build/**"]
+    },
+    "generate:types": {
+      "cache": false
+    },
+    "generate:possible-types": {
+      "cache": false
+    },
+    "relay:schema": {
+      "cache": false
+    },
+    "relay:generate": {
+      "cache": false
+    },
+    "lint": {
+      "dependsOn": ["^lint"]
     }
   }
 }
