--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "relay:schema": "yarn wait && yarn rover graph introspect http://localhost:4000 --output ./shared/relay/relay-schema.graphql",
     "relay:generate": "yarn wait && relay-compiler",
     "wait": "wait-on http://localhost:4000/health",
+    "test": "jest",
     "start": "next start",
     "lint": "eslint . --max-warnings 0"
   },
@@ -18,11 +19,16 @@
     "@apollo/experimental-nextjs-app-support": "^0.6.0",
     "@apollo/rover": "^0.22.0",
     "@faker-js/faker": "^8.3.1",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.11",
     "axios": "^1.6.5",
     "babel-plugin-relay": "^16.1.0",
     "deepmerge": "^4.3.1",
     "graphql": "^16.8.1",
     "graphql-ws": "^5.14.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lodash.isequal": "^4.5.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
